<title> Tags added to respective pages.

--- a/inception-image/src/main/java/de/tudarmstadt/ukp/inception/image/feature/ImageFeatureEditor.html
+++ b/inception-image/src/main/java/de/tudarmstadt/ukp/inception/image/feature/ImageFeatureEditor.html
@@ -17,6 +17,8 @@
 #limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Image Feature</title></head>
+
 <wicket:panel>
   <div class="form-group" wicket:enclosure="value">
     <label wicket:for="value" class="col-sm-3 control-label">
