--- a/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/bootstrap/BootstrapWizardButtonBar.html
+++ b/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/bootstrap/BootstrapWizardButtonBar.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Bootstrap Wizard Button</title></head>
 <body>
   <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div class="pull-left">
