--- a/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/menubar/MenuBar.html
+++ b/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/menubar/MenuBar.html
@@ -20,6 +20,7 @@
     xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <body>
+<head><title>Menu Bar</title></head>
   <wicket:panel>
     <div class="navbar-header">
       <a wicket:id="homeLink" class="navbar-brand">
