--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/InstancePanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/InstancePanel.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Instance Panel</title></head>
 <body>
 <wicket:panel>
   <wicket:container wicket:id="instanceinfo"></wicket:container>
