--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/KnowledgeBasePanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/KnowledgeBasePanel.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Knowledge Base</title></head>
 <body>
 <wicket:panel>
   <div class="flex-v-container flex-sidebar" style="overflow: auto;">
