--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/feature/DisabledKBWarning.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/feature/DisabledKBWarning.html
@@ -17,6 +17,7 @@
   -->
 <!DOCTYPE html>
 <html lang="en" xmlns:wicket="http://www.w3.org/1999/xhtml">
+<head><title>Disabled KB Warning</title></head>
 <body>
 <wicket:panel>
     <i wicket:id="warning" class="fa fa-warning" style="color: orange";></i>
