--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/project/wizard/KnowledgeBaseCreationWizard$TypeStep.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/project/wizard/KnowledgeBaseCreationWizard$TypeStep.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org" xmlns:margin-left="http://www.w3.org/1999/xhtml">
+<head><title>Knowledge Base Creation Wizard - Type</title></head>
 <body>
   <wicket:panel>
       <span wicket:id="generalSettings"></span>
