--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/QualifierEditor.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/QualifierEditor.html
@@ -18,6 +18,8 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Qualifier</title></head>
+
 <body>
 <wicket:panel>
   <div class="small">
