--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/StatementGroupPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/StatementGroupPanel.html
@@ -17,6 +17,8 @@
   limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Group Statement</title></head>
+
 <body>
   <wicket:panel>
     <wicket:container wicket:id="content" />
