--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/BooleanLiteralValueEditor.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/BooleanLiteralValueEditor.html
@@ -19,6 +19,8 @@
 
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Boolean Literal Value</title></head>
+
 <body>
 <wicket:panel>
   <div class="checkbox">
