--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/IRIValueEditor.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/IRIValueEditor.html
@@ -18,6 +18,8 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>IRI value</title></head>
+
 <body>
 <wicket:panel>
   <input wicket:id="value" class="flex-content"/>
