--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/NumericLiteralValueEditor.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/NumericLiteralValueEditor.html
@@ -18,6 +18,8 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Numeric Literal Value</title></head>
+
 <body>
 <wicket:panel>
   <input wicket:id="value" type="number" class="form-control flex-content" style="text-align: right;" wicket:message="placeholder:statement.value.placeholder"/>
