--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/StringLiteralValueEditor.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/StringLiteralValueEditor.html
@@ -18,6 +18,8 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>String Literal Value</title></head>
+
 <body>
 <wicket:panel>
   <input type="text" wicket:id="language" class="form-control" size="6" wicket:message="placeholder:statement.language.placeholder"></input>
