--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/StringLiteralValuePresenter.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/value/editor/StringLiteralValuePresenter.html
@@ -18,6 +18,8 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>String Literal Value Presenter</title></head>
+
 <body>
 <wicket:panel>
     <wicket:enclosure child="language">
