--- a/inception-html-editor/src/main/java/de/tudarmstadt/ukp/inception/htmleditor/HtmlAnnotationEditor.html
+++ b/inception-html-editor/src/main/java/de/tudarmstadt/ukp/inception/htmleditor/HtmlAnnotationEditor.html
@@ -17,6 +17,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
+  <head><title>Annotation Editor - HTML </title></head>
 <body>
   <wicket:panel>
     <div wicket:id="vis" class="scrolling flex-content" style="padding: 10px;"></div>
