--- a/inception-image/src/main/java/de/tudarmstadt/ukp/inception/image/sidebar/ImageSidebar.html
+++ b/inception-image/src/main/java/de/tudarmstadt/ukp/inception/image/sidebar/ImageSidebar.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Image Sidebar</title></head>
 <wicket:head>
   <style>
     .showOnHover {
