--- a/inception-layer-docmetadata/src/main/java/de/tudarmstadt/ukp/inception/ui/core/docanno/sidebar/DocumentMetadataAnnotationSelectionPanel.html
+++ b/inception-layer-docmetadata/src/main/java/de/tudarmstadt/ukp/inception/ui/core/docanno/sidebar/DocumentMetadataAnnotationSelectionPanel.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Document MetaData Annotation Selection </title></head>
 <wicket:panel>
   <div class="flex-content flex-v-container flex-gutter flex-only-internal-gutter">
     <div class="panel-small panel panel-default panel-flex flex-content">
