--- a/inception-pdf-editor/src/main/java/de/tudarmstadt/ukp/inception/pdfeditor/WrongFileFormatPanel.html
+++ b/inception-pdf-editor/src/main/java/de/tudarmstadt/ukp/inception/pdfeditor/WrongFileFormatPanel.html
@@ -17,6 +17,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
+      <head><title>Wrong File Format</title></head>
 <body>
 <wicket:panel>
   <div class="flex-content" style="display: flex; align-items: center; justify-content: center;">
