--- a/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/evaluation/EvaluationSimulationPage.html
+++ b/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/evaluation/EvaluationSimulationPage.html
@@ -17,6 +17,7 @@
 -->
 <html
   xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
+  <head><title>Evaluation Simulation</title></head>
 <head>
   <wicket:head>
     <style>
