--- a/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/evaluation/RecommenderViewPanel.html
+++ b/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/evaluation/RecommenderViewPanel.html
@@ -17,6 +17,7 @@
 #limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Recommender View</title></head>
 <body>
   <wicket:panel>
     <form wicket:id="form" class="flex-content panel panel-default panel-flex">
