--- a/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/project/RecommenderEditorPanel.html
+++ b/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/project/RecommenderEditorPanel.html
@@ -17,6 +17,7 @@
 #limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Recommender Editor</title></head>
   <wicket:panel>
     <form wicket:id="form" class="flex-content panel panel-default panel-flex">
       <div class="panel-heading">
