--- a/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/sidebar/LearningCurveChartPanel.html
+++ b/inception-recommendation/src/main/java/de/tudarmstadt/ukp/inception/recommendation/sidebar/LearningCurveChartPanel.html
@@ -17,6 +17,7 @@
 #limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Learning Curve Chart</title></head>
 <wicket:panel>
   <div class="panel panel-default panel-small">
     <div class="panel-heading">
