--- a/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/bootstrap/BootstrapWizard.html
+++ b/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/bootstrap/BootstrapWizard.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Bootstrap Wizard</title></head>
 <body>
   <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <form wicket:id="form" class="w_flex_container">
