--- a/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/dashboard/DashboardMenu.html
+++ b/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/dashboard/DashboardMenu.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>DashBoard Menu</title></head>
 <body>
   <wicket:panel>
     <ul class="nav nav-pills nav-stacked">
