--- a/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/dashboard/admin/AdminDashboardPage.html
+++ b/inception-ui-core/src/main/java/de/tudarmstadt/ukp/inception/ui/core/dashboard/admin/AdminDashboardPage.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Admin Dashboard</title></head>
 <body>
   <wicket:extend>
     <div class="dashboard-sidebar flex-sidebar scrolling">
