--- a/inception-ui-external-search/src/main/java/de/tudarmstadt/ukp/inception/app/ui/externalsearch/project/DocumentRepositoryListPanel.html
+++ b/inception-ui-external-search/src/main/java/de/tudarmstadt/ukp/inception/app/ui/externalsearch/project/DocumentRepositoryListPanel.html
@@ -17,6 +17,7 @@
 #limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Document Repository List</title></head>
 <body>
   <wicket:panel>
     <div class="flex-content panel panel-default panel-flex">
