--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/ConceptInstancePanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/ConceptInstancePanel.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Concept Instance</title></head>
 <body>
   <wicket:panel>
     <div class="flex-content flex-h-container flex-gutter flex-only-internal-gutter">
