--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/InstanceListPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/InstanceListPanel.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Instance List</title></head>
 <body>
   <wicket:panel>
     <div class="flex-content flex-v-container panel-default">
