--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/PropertyListPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/PropertyListPanel.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Property List</title></head>
 <body>
 <wicket:panel>
   <div class="flex-content panel panel-default panel-flex">
