--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/PropertyPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/PropertyPanel.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Property</title></head>
 <body>
   <wicket:panel>
     <div class="flex-content flex-h-container flex-gutter flex-only-internal-gutter">
