--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/SubclassCreationDialog$ContentPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/SubclassCreationDialog$ContentPanel.html
@@ -17,6 +17,7 @@
   limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Subclass Creation</title></head>
 <body>
   <wicket:panel>
     <form wicket:id="form">
