--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/project/wizard/KnowledgeBaseCreationWizard$SchemaConfigurationStep.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/project/wizard/KnowledgeBaseCreationWizard$SchemaConfigurationStep.html
@@ -18,6 +18,7 @@
 -->
 
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Knowledge Base Creation Wizard - Configuration</title></head>
 <body>
   <wicket:panel>
     <span wicket:id="iriPanel"></span>
