--- a/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/StatementsPanel.html
+++ b/inception-ui-kb/src/main/java/de/tudarmstadt/ukp/inception/ui/kb/stmt/StatementsPanel.html
@@ -17,6 +17,7 @@
   limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Statements</title></head>
 <body>
   <wicket:panel>
     <div class="flex-content flex-v-container flex-gutter flex-only-internal-gutter">
