--- a/inception-ui-search/src/main/java/de/tudarmstadt/ukp/inception/app/ui/search/sidebar/SearchAnnotationSidebar.html
+++ b/inception-ui-search/src/main/java/de/tudarmstadt/ukp/inception/app/ui/search/sidebar/SearchAnnotationSidebar.html
@@ -17,6 +17,7 @@
  - limitations under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
+<head><title>Search Annotation</title></head>
 <wicket:panel>
   <div class="flex-content flex-v-container flex-gutter flex-only-internal-gutter">
     <div wicket:id="mainContainer" class="panel panel-default panel-flex flex-content">
